--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Domain daongochuy.ddns.net</title>
+    <title>Github Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
     body {
@@ -34,8 +34,8 @@
 
 <body>
 <div>
-    <h1>Domain daongochuy.ddns.net</h1>
-    <p>Don't care this, just a personal website</p>
+    <h1>daongochuy2516.github.io</h1>
+    <p>Don't care this, just a personal website, hosted with Github Pages</p>
     <p>No project planned yet</p>
 
 </div>
