--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 <div>
     <h1>daongochuy2516.github.io</h1>
-    <p>Don't care this, just a personal website, hosted with Github Pages</p>
+    <p>Don't care this, just a personal website, hosted with Github Page</p>
     <p>No project planned yet</p>
 
 </div>
