--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div>
     <h1>daongochuy2516.github.io</h1>
     <p>Don't care this, just a personal website, hosted with Github Page</p>
-    <p>No project planned yet</p>
+    <a href="https://github.com/daongochuy2516/daongochuy2516.github.io/blob/70fd038301b41632bfb5d48e7ad1fb96e20f7fcb/Resources1/BaiGiang-SQL%20server.pdf">SQL Docs</a>
     
 </div>
 
