--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <body>
 <div>
     <h1>daongochuy2516.github.io</h1>
-    <p>Don't care this, just a personal website, hosted with Github Page</p>
-    <a href="https://github.com/daongochuy2516/daongochuy2516.github.io/blob/70fd038301b41632bfb5d48e7ad1fb96e20f7fcb/Resources1/BaiGiang-SQL%20server.pdf">SQL Docs</a>
+    <p>Hosted with Github Page</p>
+    
     
 </div>
 
