--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Github Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="av.png">
     <style type="text/css">
     body {
         background-color: #f0f0f2;
