--- a/index.html
+++ b/index.html
@@ -34,12 +34,9 @@
 </head>
 
 <body>
-<div>
-    <h1>daongochuy2516.github.io</h1>
-    <p>Hosted with Github Page</p>
-    
-    
-</div>
+    <p>First project hosted on GitHub</p>
+</body>
+</html>
 
 
 </body></html>
