--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
 </head>
 
 <body>
-    <p>First project hosted on GitHub</p>
-</body>
-</html>
+<div>
+    <h1>daongochuy2516.github.io</h1>
+    <p>Hosted with Github Page</p>
+    
+    
+</div>
 
 
 </body></html>
