--- a/fun.html
+++ b/fun.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no">
-    <title>volumeshader_bm_extreme</title>
+    <title>idk fun</title>
     <style>
         body {
             background: #131115;
