--- a/esp32.html
+++ b/esp32.html
@@ -183,7 +183,7 @@
 
     <h2>ESP32 - SinricPro WakeOnLan device config</h2>
 
-    <form action="/save" method="GET">
+    <form action="/save">
         <label for="ssid">Wi-Fi name (ONLY 2.4GHz pls):</label>
         <input type="text" id="ssid" name="ssid" placeholder="%WIFI%">
 
