--- a/videoplayer.html
+++ b/videoplayer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Auto Merge YouTube Streams</title>
+  <title>Video Player</title>
   <style>
     body { font-family: sans-serif; background: #111; color: white; text-align: center; padding: 2rem; }
     video { margin-top: 20px; width: 80%; max-width: 800px; background: black; }
