--- a/esp32sinric/index.html
+++ b/esp32sinric/index.html
@@ -26,35 +26,35 @@
     <form class="boxform hidden" id="configForm" onsubmit="sendConfig(event)">
         <label for="ssid">Wi-Fi name (ONLY 2.4GHz pls):</label>
         <div class="input-container">
-            <input type="text" id="ssid" name="ssid" placeholder="%WIFI%">
+            <input type="text" id="ssid" name="ssid" placeholder="WiFi Name">
         </div>
 
         <label for="password">Wi-Fi Password:</label>
         <div class="input-container">
-            <input type="password" id="password" name="password" placeholder="%WIFIPASS%">
+            <input type="password" id="password" name="password" placeholder="WiFi Password">
             <i class="fa-solid fa-eye toggle-password" data-target="password"></i>
         </div>
 
         <label for="appKey">APP KEY:</label>
         <div class="input-container">
-            <input type="password" id="appKey" name="appKey" placeholder="%APPKEY%">
+            <input type="password" id="appKey" name="appKey" placeholder="App Key">
             <i class="fa-solid fa-eye toggle-password" data-target="appKey"></i>
         </div>
 
         <label for="appSecret">APP SECRET:</label>
         <div class="input-container">
-            <input type="password" id="appSecret" name="appSecret" placeholder="%APPSECRET%">
+            <input type="password" id="appSecret" name="appSecret" placeholder="App Secret">
             <i class="fa-solid fa-eye toggle-password" data-target="appSecret"></i>
         </div>
 
         <label for="deviceId">DEVICE ID:</label>
         <div class="input-container">
-            <input type="text" id="deviceId" name="deviceId" placeholder="%DEVICEID%">
+            <input type="text" id="deviceId" name="deviceId" placeholder="Device ID">
         </div>
 
         <label for="pcMac">PC MAC Address:</label>
         <div class="input-container">
-            <input type="text" id="pcMac" name="pcMac" placeholder="%PCMAC%">
+            <input type="text" id="pcMac" name="pcMac" placeholder="00:1A:2B:3C:4D:5E">
         </div>
 
         <div class="form-group">
