--- a/esp32sinric/index.html
+++ b/esp32sinric/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Device config</title>
+    <title>ESP32 SinricPro Web Manager</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -14,7 +14,7 @@
 
 <body>
 
-    <h2>ESP32 - SinricPro WakeOnLan device config (USB)</h2>
+    <h2>ESP32 - SinricPro Web Manager (USB)</h2>
     <div id="connectusb" class="box">
         <esp-web-install-button id="realBtn" manifest="firmware/manifest.json" class="hidden"></esp-web-install-button>
         <button id="fakeBtn" class="btn">⚡Flash Firmware</button>
