--- a/esp32sinric/index.html
+++ b/esp32sinric/index.html
@@ -24,8 +24,8 @@
     <br>
 
     <form class="boxform hidden" id="configForm" onsubmit="sendConfig(event)">
-        
-        <label for="wifiList">Available WiFi:</label>
+
+        <label for="wifiList">Available WiFi: (firmware update soon)</label>
         <div class="input-container">
             <div style="display: flex; gap: 10px;">
                 <select id="wifiList" style="flex: 1;">
